k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend-service
spec:
  type: ClusterIP
  selector:
    app: react-frontend
  ports:
    - port: 80
      targetPort: 80
